--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "trpc-nuxt": "^0.3.0",
+    "ts-node": "^10.9.1",
     "zod": "^3.19.1"
   },
   "prisma": {
-    "schema": "server/database/schema.prisma"
+    "schema": "server/database/schema.prisma",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} server/database/seed.ts"
   }
 }
+
